Fixed spacing for components in PC Builder

--- a/finalsprint-s2/src/components/PCBuilder.css
+++ b/finalsprint-s2/src/components/PCBuilder.css
@@ -14,7 +14,7 @@
   list-style-type: none;
   margin: 16px;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr auto 0.5fr 0.5fr;
+  /* grid-template-rows: 1fr 1fr auto 0.5fr 0.5fr; */
 }
 
 .product-category {
